--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     The encoder then attends to the specified interval, as well as the surrounding context in both modalities, in order to recognise the ongoing action.
 
     We test TIM on three long audio-visual video datasets: EPIC-KITCHENS, Perception Test, and AVE, reporting state-of-the-art (SOTA) for recognition.
-    On EPIC-KITCHENS, we beat previous SOTA that utilises LLMs and significantly larger pre-training by 2.9\% top-1 action recognition accuracy.
+    On EPIC-KITCHENS, we beat previous SOTA that utilises LLMs and significantly larger pre-training by 2.9% top-1 action recognition accuracy.
     Additionally, we show that TIM can be adapted for action detection, using dense multi-scale interval queries, outperforming SOTA on EPIC-KITCHENS-100 for most metrics, and showing strong performance on the Perception Test.
     Our ablations show the critical role of integrating the two modalities and modelling their time intervals in achieving this performance. Code and models at: <a href="https://github.com/JacobChalk/TIM">https://github.com/JacobChalk/TIM</a>.</p>
 
@@ -87,7 +87,7 @@
 </code></pre></div></div>
 
 <h2 id="acknowledgements">Acknowledgements</h2>
-<p>This work uses public datasets. It is supported by EPSRC Doctoral Training Program, EPSRC UMPIRE EP/T004991/1 and EPSRC Programme Grant VisualAI EP/T028572/1; and by the use of the EPSRC funded Tier 2 facility \mbox{JADE-II}.</p>
+<p>This work uses public datasets. It is supported by EPSRC Doctoral Training Program, EPSRC UMPIRE EP/T004991/1 and EPSRC Programme Grant VisualAI EP/T028572/1; and by the use of the EPSRC funded Tier 2 facility JADE-II.</p>
 
 
       <footer class="site-footer">
