--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
     }
 </style>
 
+<p>PENDING</p>
 <!-- <div class="embed-container">
     <iframe src="link" frameborder="0" allowfullscreen=""></iframe>
 </div> -->
 
 <h2 id="paper">Downloads</h2>
 <ul>
-<li>Paper <a class="nounderline" target="_blank" href="https://arxiv.org/abs/2111.01024">[arXiv]</a></li>
+<li>Paper <a class="nounderline" target="_blank" href="https://github.com/JacobChalk/TIM">[arXiv]</a></li>
 <li>Code and models <a class="nounderline" target="_blank" href="https://github.com/JacobChalk/TIM">[GitHub]</a></li>
 </ul>
 
