--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
     }
 </style>
 
-<p>PENDING</p>
-<!-- <div class="embed-container">
-    <iframe src="link" frameborder="0" allowfullscreen=""></iframe>
-</div> -->
+<div class="embed-container">
+    <iframe src="https://www.youtube.com/watch?v=uEWc5EpZJg4" frameborder="0" allowfullscreen=""></iframe>
+</div>
 
 <h2 id="paper">Downloads</h2>
 <ul>
