--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </style>
 
 <div class="embed-container">
-    <iframe src="https://www.youtube.com/watch?v=uEWc5EpZJg4" frameborder="0" allowfullscreen=""></iframe>
+    <iframe src="https://www.youtube.com/embed/uEWc5EpZJg4" frameborder="0" allowfullscreen=""></iframe>
 </div>
 
 <h2 id="paper">Downloads</h2>
