--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
     We address the interplay between the two modalities in long videos by explicitly modelling the temporal extents of audio and visual events.
     We propose the Time Interval Machine~(TIM) where a modality-specific time interval poses as a query to a transformer encoder that ingests a long video input.
     The encoder then attends to the specified interval, as well as the surrounding context in both modalities, in order to recognise the ongoing action.
+</p>
 
-    We test TIM on three long audio-visual video datasets: EPIC-KITCHENS, Perception Test, and AVE, reporting state-of-the-art (SOTA) for recognition.
+<p>We test TIM on three long audio-visual video datasets: EPIC-KITCHENS, Perception Test, and AVE, reporting state-of-the-art (SOTA) for recognition.
     On EPIC-KITCHENS, we beat previous SOTA that utilises LLMs and significantly larger pre-training by 2.9% top-1 action recognition accuracy.
     Additionally, we show that TIM can be adapted for action detection, using dense multi-scale interval queries, outperforming SOTA on EPIC-KITCHENS-100 for most metrics, and showing strong performance on the Perception Test.
     Our ablations show the critical role of integrating the two modalities and modelling their time intervals in achieving this performance. Code and models at: <a href="https://github.com/JacobChalk/TIM">https://github.com/JacobChalk/TIM</a>.</p>
