--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <p>Diverse actions give rise to rich audio-visual signals in long videos.
     Recent works showcase that the two modalities of audio and video exhibit different temporal extents of events and distinct labels.
     We address the interplay between the two modalities in long videos by explicitly modelling the temporal extents of audio and visual events.
-    We propose the Time Interval Machine~(TIM) where a modality-specific time interval poses as a query to a transformer encoder that ingests a long video input.
+    We propose the Time Interval Machine (TIM) where a modality-specific time interval poses as a query to a transformer encoder that ingests a long video input.
     The encoder then attends to the specified interval, as well as the surrounding context in both modalities, in order to recognise the ongoing action.
 </p>
 
