--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <section class="main-content">
       <p align="center" style="font-size:30px">
-        <a href="https://jacobchalk.github.io/">Jacob Chalk</a><sup>1</sup>, <a href="https://www.robots.ox.ac.uk/~jaesung/">Jaesung Huh</a><sup>2</sup>, <a href="https://ekazakos.github.io/">Evangelos Kazakos</a><sup>3</sup>, <a href="https://www.robots.ox.ac.uk/~az/">Andrew Zisserman</a><sup>2</sup> and <a href="https://dimadamen.github.io/">Dima Damen</a><sup>1</sup>
+        <a href="https://jacobchalk.github.io/">Jacob Chalk</a><sup>*1</sup>, <a href="https://www.robots.ox.ac.uk/~jaesung/">Jaesung Huh</a><sup>*2</sup>, <a href="https://ekazakos.github.io/">Evangelos Kazakos</a><sup>3</sup>, <a href="https://www.robots.ox.ac.uk/~az/">Andrew Zisserman</a><sup>2</sup> and <a href="https://dimadamen.github.io/">Dima Damen</a><sup>1</sup>
 </p>
 <p align="center" style="font-size:20px">
     <sup>1</sup>University of Bristol, Dept. of Computer Science, <sup>2</sup>University of Oxford, VGG, <sup>3</sup>Czech Technical University in Prague
