--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 <p align="center" style="font-size:20px">
     <sup>1</sup>University of Bristol, Dept. of Computer Science, <sup>2</sup>University of Oxford, VGG, <sup>3</sup>Czech Technical University in Prague
 </p>
+<p align="center" style="font-size:20px">
+    <sup>*</sup> indicates equal contribution
+</p>
 
 <p><img src="/TIM-Project/teaser.png" alt="Overview"/></p>
 <h2 id="abstract">Abstract</h2>
