--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <h2 id="paper">Downloads</h2>
 <ul>
-<li>Paper <a class="nounderline" target="_blank" href="https://jacobchalk.github.io/TIM-Project/">[arXiv]</a></li>
+<li>Paper <a class="nounderline" target="_blank" href="https://arxiv.org/abs/2404.05559">[arXiv]</a></li>
 <li>Code and models <a class="nounderline" target="_blank" href="https://github.com/JacobChalk/TIM">[GitHub]</a></li>
 </ul>
 
