--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <sup>1</sup>University of Bristol, Dept. of Computer Science, <sup>2</sup>University of Oxford, VGG, <sup>3</sup>Czech Technical University in Prague
 </p>
 <p align="center" style="font-size:20px">
-    <sup>*</sup> Indicates equal contribution
+    <sup>*</sup>: Indicates equal contribution
 </p>
 
 <p><img src="/TIM-Project/teaser.png" alt="Overview"/></p>
